--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dell.smartchat">
+    package="com.hanzlilahsheikh.dell.smartchat">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -9,50 +9,50 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:name=".SmartChat"
+        android:name="com.hanzlilahsheikh.dell.smartchat.SmartChat"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".FirebaseMessagingService">
+        <service android:name="com.hanzlilahsheikh.dell.smartchat.FirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.hanzlilahsheikh.dell.smartchat.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StartActivity" />
+        <activity android:name="com.hanzlilahsheikh.dell.smartchat.StartActivity" />
         <activity
-            android:name=".RegisterActivity"
-            android:parentActivityName=".StartActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".SettingsActivity" />
+            android:name="com.hanzlilahsheikh.dell.smartchat.RegisterActivity"
+            android:parentActivityName="com.hanzlilahsheikh.dell.smartchat.StartActivity" />
+        <activity android:name="com.hanzlilahsheikh.dell.smartchat.LoginActivity" />
+        <activity android:name="com.hanzlilahsheikh.dell.smartchat.SettingsActivity" />
         <activity
-            android:name=".StatusActivity"
-            android:parentActivityName=".SettingsActivity" />
+            android:name="com.hanzlilahsheikh.dell.smartchat.StatusActivity"
+            android:parentActivityName="com.hanzlilahsheikh.dell.smartchat.SettingsActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
-            android:name=".UsersActivity"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".ProfileActivity">
+            android:name="com.hanzlilahsheikh.dell.smartchat.UsersActivity"
+            android:parentActivityName="com.hanzlilahsheikh.dell.smartchat.MainActivity" />
+        <activity android:name="com.hanzlilahsheikh.dell.smartchat.ProfileActivity">
             <intent-filter>
                 <action android:name="com.example.dell.smartchat_TARGET_NOTIFICATION" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChatActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name="com.hanzlilahsheikh.dell.smartchat.ChatActivity"
+            android:parentActivityName="com.hanzlilahsheikh.dell.smartchat.MainActivity"></activity>
     </application>
 
 </manifest>
